HTML5 <figure> tag cannot be wrapped inside a <p> tag - fixed and documented in README.md

--- a/css/default.css
+++ b/css/default.css
@@ -277,6 +277,10 @@ article img {
 	max-width:100%;
 }
 
+figure {
+	margin-bottom:1.3em;
+}
+
 
 /* tables */
 
